--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-database.url=jdbc:mysql://localhost:3306/decorations-db
-database.username=client
-database.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/decorations-db
+spring.datasource.username=client
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
